app/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amusedfunc-ingress
  namespace: amused
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - cluster.aks-ingress.amused.com
  rules:
    - host: cluster.aks-ingress.amused.com
      http:
        paths:
          - path: /_apis/amused/amusedfunc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: amusedfunc-service
                port:
                  number: 80
